--- a/.github/workflows/duoauthpoxy.yml
+++ b/.github/workflows/duoauthpoxy.yml
@@ -6,12 +6,17 @@ defaults:
     shell: bash
     working-directory: /tmp
 
+env:
+  GIT_SUBDIR: duoauthproxy
+  REGISTRY: pcr.jlv6.com:443
+  IMAGE_NAME: ${{ env.GIT_SUBDIR }}
+
 on:
   push:
     paths:
-    - 'duoauthpoxy/**'
-#   tags:
-#     - '[0-9]+.[0-9]+.[0-9]+'
+    - '${{ env.GIT_SUBDIR }}/**'
+    tags:
+    - '[0-9]+.[0-9]+.[0-9]+'
 
 concurrency:
   group: ${{ github.workflow }}
@@ -19,4 +24,29 @@ concurrency:
 
 jobs:
   docker:
-    runs
+    runs-on: [self-hosted, X64]
+    steps:
+      - name: checkout
+        uses: actions/checkout@v4
+      - name: setup QEMU
+        uses: docker/setup-qemu-action@v3
+      - name: setup Docker Buildx
+        uses: docker/setup-buildx-action@v3
+      - name: login to pcr
+        uses: docker/login-action@v3
+        with:
+          registry: ${{ env.REGISTRY }}
+          username: ${{ secrets.PCR_USERNAME }}
+          password: ${{ secrets.PCR_PASSWORD }}
+      - name: extract metadata for the docker image
+        id: meta
+        uses: docker/metadata-action@v5
+        with:
+          images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
+      - name: build and push
+        uses: docker/build-push-action@v5
+        with:
+          context: "{{defaultContext}}:${{ env.GIT_SUBDIR }}"
+          push: true
+          tags: ${{ steps.meta.outputs.tags }}
+          labels: ${{ steps.meta.outputs.labels }}
