--- a/.github/workflows/duoauthpoxy.yml
+++ b/.github/workflows/duoauthpoxy.yml
@@ -42,7 +42,7 @@ jobs:
         id: meta
         uses: docker/metadata-action@v5
         with:
-          images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
+          images: "${{ env.REGISTRY }}/arc-${{ env.IMAGE_NAME }}"
       - name: build and push
         uses: docker/build-push-action@v5
         with:
