--- a/.github/workflows/duoauthproxy_check_for_new_version.yaml
+++ b/.github/workflows/duoauthproxy_check_for_new_version.yaml
@@ -1,9 +1,9 @@
 name: duoauthproxy - check_for_new_version
 
 on:
+  workflow_dispatch:  # allows for triggering workflow manually.
   schedule:
     - cron: "0 0 * * *"
-  workflow_dispatch  # allows for triggering workflow manually.
 
 concurrency:
   group: ${{ github.workflow }}
