--- a/.github/workflows/duoauthproxy_check_for_new_version.yaml
+++ b/.github/workflows/duoauthproxy_check_for_new_version.yaml
@@ -18,12 +18,42 @@ jobs:
         run: |
           latest_version=$(curl -s -I -L "https://dl.duosecurity.com/duoauthproxy-latest-src.tgz" | grep -i "content-disposition" | awk -F'filename="' '{print $2}' | awk -F'"' '{print $1}' | awk -F'-' '{print $2}')
 
-          if [ "$latest_version" != "${{ env.DUO_PREVIOUS_VERSION }}" ]; then
+          if [ "$latest_version" != "${{ vars.DUO_PREVIOUS_VERSION }}" ]; then
             echo "New version found: $latest_version"
-            echo "::set-env name=DUO_NEW_VERSION_FOUND::true"
-            echo "::set-env name=DUO_PREVIOUS_VERSION::${{ env.DUO_LATEST_VERSION }}"
-            echo "::set-env name=DUO_LATEST_VERSION::$latest_version"           
+
+            curl -L \
+              -X PATCH \
+              -H "Accept: application/vnd.github+json" \
+              -H "Authorization: Bearer ${{ secrets.PAT }}"
+              -H "X-GitHub-Api-Version: 2022-11-28" \
+              https://api.github.com/repos/elaurensx/dockerbuild/actions/variables/DUO_NEW_VERSION_FOUND \
+              -d '{"name":"DUO_NEW_VERSION_FOUND","value":"true"}'
+              
+            curl -L \
+              -X PATCH \
+              -H "Accept: application/vnd.github+json" \
+              -H "Authorization: Bearer ${{ secrets.PAT }}"
+              -H "X-GitHub-Api-Version: 2022-11-28" \
+              https://api.github.com/repos/elaurensx/dockerbuild/actions/variables/DUO_PREVIOUS_VERSION \
+              -d '{"name":"DUO_PREVIOUS_VERSION","value":"${{ vars.DUO_LATEST_VERSION }}"}'
+              
+            curl -L \
+              -X PATCH \
+              -H "Accept: application/vnd.github+json" \
+              -H "Authorization: Bearer ${{ secrets.PAT }}"
+              -H "X-GitHub-Api-Version: 2022-11-28" \
+              https://api.github.com/repos/elaurensx/dockerbuild/actions/variables/DUO_LATEST_VERSION \
+              -d '{"name":"DUO_LATEST_VERSION","value":"$latest_version"}'
+              
           else
             echo "No new version found."
-            echo "::set-env name=DUO_NEW_VERSION_FOUND::false"
+            
+            curl -L \
+              -X PATCH \
+              -H "Accept: application/vnd.github+json" \
+              -H "Authorization: Bearer ${{ secrets.PAT }}"
+              -H "X-GitHub-Api-Version: 2022-11-28" \
+              https://api.github.com/repos/elaurensx/dockerbuild/actions/variables/DUO_NEW_VERSION_FOUND \
+              -d '{"name":"DUO_NEW_VERSION_FOUND","value":"false"}'
+              
           fi
