--- a/.github/workflows/duoauthproxy_build_docker_image.yaml
+++ b/.github/workflows/duoauthproxy_build_docker_image.yaml
@@ -8,12 +8,13 @@ env:
 on:
   workflow_run:
     workflows: ["duoauthproxy_check_for_new_version"]
+    branches: [main]
     types:
       - completed
 
 jobs:
   build-image:
-    if: ${{ vars.DUO_NEW_VERSION_FOUND }} == "true"
+    if: ${{ github.event.workflow_run.conclusion == 'success' }} && ${{ vars.DUO_NEW_VERSION_FOUND }} == "true"
     runs-on: [self-hosted, X64]
     steps:
       - name: checkout
