--- a/.github/workflows/duoauthproxy_check_for_new_version.yaml
+++ b/.github/workflows/duoauthproxy_check_for_new_version.yaml
@@ -24,7 +24,7 @@ jobs:
             curl -L \
               -X PATCH \
               -H "Accept: application/vnd.github+json" \
-              -H "Authorization: Bearer ${{ secrets.PAT }}"
+              -H "Authorization: Bearer ${{ secrets.PAT }}" \
               -H "X-GitHub-Api-Version: 2022-11-28" \
               https://api.github.com/repos/elaurensx/dockerbuild/actions/variables/DUO_NEW_VERSION_FOUND \
               -d '{"name":"DUO_NEW_VERSION_FOUND","value":"true"}'
@@ -32,7 +32,7 @@ jobs:
             curl -L \
               -X PATCH \
               -H "Accept: application/vnd.github+json" \
-              -H "Authorization: Bearer ${{ secrets.PAT }}"
+              -H "Authorization: Bearer ${{ secrets.PAT }}" \
               -H "X-GitHub-Api-Version: 2022-11-28" \
               https://api.github.com/repos/elaurensx/dockerbuild/actions/variables/DUO_PREVIOUS_VERSION \
               -d '{"name":"DUO_PREVIOUS_VERSION","value":"${{ vars.DUO_LATEST_VERSION }}"}'
@@ -40,7 +40,7 @@ jobs:
             curl -L \
               -X PATCH \
               -H "Accept: application/vnd.github+json" \
-              -H "Authorization: Bearer ${{ secrets.PAT }}"
+              -H "Authorization: Bearer ${{ secrets.PAT }}" \
               -H "X-GitHub-Api-Version: 2022-11-28" \
               https://api.github.com/repos/elaurensx/dockerbuild/actions/variables/DUO_LATEST_VERSION \
               -d '{"name":"DUO_LATEST_VERSION","value":"$latest_version"}'
@@ -51,7 +51,7 @@ jobs:
             curl -L \
               -X PATCH \
               -H "Accept: application/vnd.github+json" \
-              -H "Authorization: Bearer ${{ secrets.PAT }}"
+              -H "Authorization: Bearer ${{ secrets.PAT }}" \
               -H "X-GitHub-Api-Version: 2022-11-28" \
               https://api.github.com/repos/elaurensx/dockerbuild/actions/variables/DUO_NEW_VERSION_FOUND \
               -d '{"name":"DUO_NEW_VERSION_FOUND","value":"false"}'
