--- a/.github/workflows/duoauthproxy_check_for_new_version.yaml
+++ b/.github/workflows/duoauthproxy_check_for_new_version.yaml
@@ -43,7 +43,7 @@ jobs:
               -H "Authorization: Bearer ${{ secrets.PAT }}" \
               -H "X-GitHub-Api-Version: 2022-11-28" \
               https://api.github.com/repos/elaurensx/dockerbuild/actions/variables/DUO_LATEST_VERSION \
-              -d '{"name":"DUO_LATEST_VERSION","value":"$latest_version"}'
+              -d '{"name":"DUO_LATEST_VERSION","value":$latest_version}'
               
           else
             echo "No new version found."
