--- a/.github/workflows/duoauthproxy_check_for_new_version.yaml
+++ b/.github/workflows/duoauthproxy_check_for_new_version.yaml
@@ -27,7 +27,7 @@ jobs:
               -H "Authorization: Bearer ${{ secrets.PAT }}" \
               -H "X-GitHub-Api-Version: 2022-11-28" \
               https://api.github.com/repos/elaurensx/dockerbuild/actions/variables/DUO_NEW_VERSION_FOUND \
-              -d '{"name":"DUO_NEW_VERSION_FOUND","value":"true"}'
+              -d "{"name":"DUO_NEW_VERSION_FOUND","value":"true"}"
               
             curl -L \
               -X PATCH \
@@ -35,7 +35,7 @@ jobs:
               -H "Authorization: Bearer ${{ secrets.PAT }}" \
               -H "X-GitHub-Api-Version: 2022-11-28" \
               https://api.github.com/repos/elaurensx/dockerbuild/actions/variables/DUO_PREVIOUS_VERSION \
-              -d '{"name":"DUO_PREVIOUS_VERSION","value":"${{ vars.DUO_LATEST_VERSION }}"}'
+              -d "{"name":"DUO_PREVIOUS_VERSION","value":"${{ vars.DUO_LATEST_VERSION }}"}"
               
             curl -L \
               -X PATCH \
@@ -43,7 +43,7 @@ jobs:
               -H "Authorization: Bearer ${{ secrets.PAT }}" \
               -H "X-GitHub-Api-Version: 2022-11-28" \
               https://api.github.com/repos/elaurensx/dockerbuild/actions/variables/DUO_LATEST_VERSION \
-              -d '{"name":"DUO_LATEST_VERSION","value":$latest_version}'
+              -d "{"name":"DUO_LATEST_VERSION","value":"$latest_version"}"
               
           else
             echo "No new version found."
@@ -54,6 +54,6 @@ jobs:
               -H "Authorization: Bearer ${{ secrets.PAT }}" \
               -H "X-GitHub-Api-Version: 2022-11-28" \
               https://api.github.com/repos/elaurensx/dockerbuild/actions/variables/DUO_NEW_VERSION_FOUND \
-              -d '{"name":"DUO_NEW_VERSION_FOUND","value":"false"}'
+              -d "{"name":"DUO_NEW_VERSION_FOUND","value":"false"}"
               
           fi
