--- a/.github/workflows/duoauthproxy_build_docker_image.yaml
+++ b/.github/workflows/duoauthproxy_build_docker_image.yaml
@@ -7,14 +7,18 @@ env:
   
 on:
   workflow_run:
-    workflows: ["duoauthproxy_check_for_new_version"]
+    workflows: ["duoauthproxy - check_for_new_version"]
     branches: [main]
     types:
       - completed
 
+concurrency:
+  group: ${{ github.workflow }}
+  cancel-in-progress: true
+
 jobs:
   build-image:
-    if: ${{ github.event.workflow_run.conclusion == 'success' }} && ${{ vars.DUO_NEW_VERSION_FOUND }} == "true"
+    if: ${{ github.event.workflow_run.conclusion == 'success' }} && ${{ vars.DUO_NEW_VERSION_FOUND == "true" }}
     runs-on: [self-hosted, X64]
     steps:
       - name: checkout
@@ -42,4 +46,4 @@ jobs:
           platforms: linux/amd64
           tags: |
             "${{ env.REGISTRY }}/arc-${{ env.IMAGE_NAME }}:latest"
-            "${{ env.REGISTRY }}/arc-${{ env.IMAGE_NAME }}:{{ vars.DUO_LATEST_VERSION }}"
+            "${{ env.REGISTRY }}/arc-${{ env.IMAGE_NAME }}:{{ vars.DUO_VERSION }}"
