--- a/.github/workflows/duoauthproxy_build_docker_image.yaml
+++ b/.github/workflows/duoauthproxy_build_docker_image.yaml
@@ -45,4 +45,4 @@ jobs:
           platforms: linux/amd64
           tags: |
             "${{ env.REGISTRY }}/arc-${{ env.GIT_SUBDIR }}:latest"
-            "${{ env.REGISTRY }}/arc-${{ env.GIT_SUBDIR }}:{{ vars.DUO_VERSION }}"
+            "${{ env.REGISTRY }}/arc-${{ env.GIT_SUBDIR }}:${{ vars.DUO_VERSION }}"
