fix-check-versions2

--- a/.github/workflows/duoauthproxy_build_docker_image.yaml
+++ b/.github/workflows/duoauthproxy_build_docker_image.yaml
@@ -16,12 +16,14 @@ concurrency:
   cancel-in-progress: true
 
 jobs:
-  runs-on: [self-hosted, X64]
   debug:
+    runs-on: [self-hosted, X64]
     steps:
       - name: print var DUO_NEW_VERSION_FOUND
         run: echo "DUO_NEW_VERSION_FOUND value is ${{ vars.DUO_NEW_VERSION_FOUND }}" 
   build-image:
+    runs-on: [self-hosted, X64]
+    needs: debug  # Actions runs jobs in parallel by default. Setting a dependency makes it run in a sequence.
     if: ${{ vars.DUO_NEW_VERSION_FOUND == "true" }}
     steps:
       - name: checkout
