--- a/.github/workflows/homeassistant_build_docker_image.yaml
+++ b/.github/workflows/homeassistant_build_docker_image.yaml
@@ -21,13 +21,25 @@ jobs:
     steps:
       - name: print var HA_NEW_VERSION_FOUND
         run: echo "HA_NEW_VERSION_FOUND value is ${{ vars.HA_NEW_VERSION_FOUND }}" 
-  build-image:
+  chconfig:
     runs-on: [self-hosted, X64]
-    needs: debug  # Actions runs jobs in parallel by default. Setting a dependency makes it run in a sequence.
+    needs: debug
     if: ${{ vars.HA_NEW_VERSION_FOUND == 'true' }}
     steps:
       - name: checkout
         uses: actions/checkout@v4
+      - name: find and replace - Dockerfile
+        uses: jacobtomlinson/gha-find-replace@v3
+        with:
+          include: "${{ env.GIT_SUBDIR }}/Dockerfile"
+          find: ^(FROM homeassistant\/home-assistant:).*$
+          replace: "${{ vars.HA_VERSION }}"
+          regex: true
+  build-image:
+    runs-on: [self-hosted, X64]
+    needs: chconfig
+    if: ${{ vars.HA_NEW_VERSION_FOUND == 'true' }}
+    steps:
       - name: setup QEMU
         uses: docker/setup-qemu-action@v3
       - name: setup Docker Buildx
@@ -52,3 +64,18 @@ jobs:
           tags: |
             "${{ env.REGISTRY }}/arc-${{ env.GIT_SUBDIR }}:latest"
             "${{ env.REGISTRY }}/arc-${{ env.GIT_SUBDIR }}:${{ vars.HA_VERSION }}"
+  pushch:
+    runs-on: [self-hosted, X64]
+    needs: build-image
+    if: ${{ vars.HA_NEW_VERSION_FOUND == 'true' }}
+    steps:
+      - name: commit files
+        run: |
+          git config --local user.email "39435022+github-actions[bot]@users.noreply.github.com"
+          git config --local user.name "github-actions[bot]"
+          git commit -a -m "Add changes"
+      - name: push # Any modifications during a GitHub Actions workflow are only made to the working copy checked out by the actions/checkout step.
+        uses: ad-m/github-push-action@master
+        with:
+          github_token: ${{ secrets.PAT }}
+          branch: ${{ github.ref }}
