--- a/.github/workflows/homeassistant_build_docker_image.yaml
+++ b/.github/workflows/homeassistant_build_docker_image.yaml
@@ -35,6 +35,41 @@ jobs:
           find: ^(FROM homeassistant\/home-assistant:).*$
           replace: "${{ vars.HA_VERSION }}"
           regex: true
+      - name: find and replace - ldap-auth-ad - HA_LDAP_SERVER
+        uses: jacobtomlinson/gha-find-replace@v3
+        with:
+          include: "${{ env.GIT_SUBDIR }}/ldap-auth-ad.py"
+          find: ^(SERVER = ).*$
+          replace: "${{ vars.HA_LDAP_SERVER }}"
+          regex: true
+      - name: find and replace - ldap-auth-ad - HA_LDAP_HELPER_DN
+        uses: jacobtomlinson/gha-find-replace@v3
+        with:
+          include: "${{ env.GIT_SUBDIR }}/ldap-auth-ad.py"
+          find: ^(HELPERDN = ).*$
+          replace: "${{ vars.HA_LDAP_HELPERDN }}"
+          regex: true
+      - name: find and replace - ldap-auth-ad - HA_LDAP_HELPER_PWD
+        uses: jacobtomlinson/gha-find-replace@v3
+        with:
+          include: "${{ env.GIT_SUBDIR }}/ldap-auth-ad.py"
+          find: ^(HELPERPASS = ).*$
+          replace: "${{ vars.HA_LDAP_HELPER_PWD }}"
+          regex: true
+      - name: find and replace - ldap-auth-ad - HA_LDAP_BASEDN
+        uses: jacobtomlinson/gha-find-replace@v3
+        with:
+          include: "${{ env.GIT_SUBDIR }}/ldap-auth-ad.py"
+          find: ^(BASEDN = ).*$
+          replace: "${{ vars.HA_LDAP_BASEDN }}"
+          regex: true
+      - name: find and replace - ldap-auth-ad - HA_LDAP_MEMBEROF
+        uses: jacobtomlinson/gha-find-replace@v3
+        with:
+          include: "${{ env.GIT_SUBDIR }}/ldap-auth-ad.py"
+          find: ^\s*\(memberOf=.*
+          replace: "${{ vars.HA_LDAP_MEMBEROF }}"
+          regex: true
   build-image:
     runs-on: [self-hosted, X64]
     needs: chconfig
@@ -64,18 +99,3 @@ jobs:
           tags: |
             "${{ env.REGISTRY }}/arc-${{ env.GIT_SUBDIR }}:latest"
             "${{ env.REGISTRY }}/arc-${{ env.GIT_SUBDIR }}:${{ vars.HA_VERSION }}"
-  pushch:
-    runs-on: [self-hosted, X64]
-    needs: build-image
-    if: ${{ vars.HA_NEW_VERSION_FOUND == 'true' }}
-    steps:
-      - name: commit files
-        run: |
-          git config --local user.email "39435022+github-actions[bot]@users.noreply.github.com"
-          git config --local user.name "github-actions[bot]"
-          git commit -a -m "Add changes"
-      - name: push # Any modifications during a GitHub Actions workflow are only made to the working copy checked out by the actions/checkout step.
-        uses: ad-m/github-push-action@master
-        with:
-          github_token: ${{ secrets.PAT }}
-          branch: ${{ github.ref }}
