--- a/homeassistant/Dockerfile
+++ b/homeassistant/Dockerfile
@@ -1,11 +1,22 @@
 # syntax=docker/dockerfile:1
-FROM homeassistant/home-assistant:abc
+FROM homeassistant/home-assistant:latest
 LABEL base_image: "docker.io/homeassistant/home-assistant:latest_stable"
 LABEL maintainer="dev_lau11@a.jlv6.com"
-USER root
+# USER root
+## LDAP
+COPY ./ldap-auth-ad.py /config/ldap-auth/
+WORKDIR /config/ldap-auth
 RUN <<EOF
   set -eux
-  cd /tmp
+  chmod 755 ./ldap-auth-ad.py
+  pip install -t . ldap3
 EOF
+## HACS
+WORKDIR /config
+RUN <<EIF
+  set -eux
+  mkdir ./custom_components
+  cd ./custom_components
+  wget -O - https://get.hacs.xyz | bash -
 EXPOSE 80
 ENTRYPOINT ["/init"]
