--- a/.github/workflows/duoauthproxy_build_docker_image.yaml
+++ b/.github/workflows/duoauthproxy_build_docker_image.yaml
@@ -2,7 +2,7 @@ name: duoauthproxy - build_docker_image
 
 env:
   GIT_SUBDIR: duoauthproxy
-  REGISTRY: pcrrr00.jlv6.com:443
+  REGISTRY: pcr-http.code.svc.cluster.local:5000
   
 on:
   workflow_run:
