--- a/.github/workflows/duoauthproxy_build_docker_image.yaml
+++ b/.github/workflows/duoauthproxy_build_docker_image.yaml
@@ -2,7 +2,7 @@ name: duoauthproxy - build_docker_image
 
 env:
   GIT_SUBDIR: duoauthproxy
-  REGISTRY: pcrrr00.jlv6.com:443
+  REGISTRY: pcr-http.code.svc.cluster.local:5000
   
 on:
   workflow_run:
@@ -32,6 +32,11 @@ jobs:
         uses: docker/setup-qemu-action@v3
       - name: setup Docker Buildx
         uses: docker/setup-buildx-action@v3
+        with:
+          config-inline: |
+            [registry."${{ env.REGISTRY }}"]
+              http = true
+              insecure = true
       - name: login to pcr
         uses: docker/login-action@v3
         with:
