--- a/.bkp/duoauthproxy_build_docker_image.yaml
+++ b/.bkp/duoauthproxy_build_docker_image.yaml
@@ -37,6 +37,12 @@ jobs:
             [registry."${{ env.REGISTRY }}"]
               http = true
               insecure = true
+      - name: login to pcr
+        uses: docker/login-action@v3
+        with:
+          registry: ${{ env.REGISTRY }}
+          username: ${{ secrets.PCR_USERNAME }}
+          password: ${{ secrets.PCR_PASSWORD }}
       - name: extract metadata for the docker image
         id: meta
         uses: docker/metadata-action@v5
