--- a/haproxy/Dockerfile
+++ b/haproxy/Dockerfile
@@ -1,15 +1,19 @@
 FROM alpine:3.19.1
 LABEL maintainer="dev_lau11@a.jlv6.com"
 LABEL os="alpine3.19.1"
-RUN apk --update -t add --no-cache haproxy curl iproute2 && \
+RUN apk --update -t add --no-cache haproxy curl libcap iproute2 tzdata && \
     rm -f /var/cache/apk/* /tmp/* && \
     rm -f /sbin/halt /sbin/poweroff /sbin/reboot
 COPY ./haproxy.cfg /usr/local/etc/haproxy/haproxy.cfg
 RUN <<EOF
-  addgroup -S haproxy && adduser -S -G haproxy haproxy
+  addgroup -S haproxy && adduser -S -s /sbin/nologin -G haproxy haproxy
   chown haproxy:haproxy /usr/local/etc/haproxy/haproxy.cfg
-  chmod 644 /usr/local/etc/haproxy/haproxy.cfg
+  chmod 774 /usr/local/etc/haproxy/haproxy.cfg
+  chown haproxy:haproxy /usr/sbin/haproxy
+  chmod 4774 /usr/sbin/haproxy
+  setcap 'cap_net_bind_service=+ep' /usr/sbin/haproxy
+  ln -sf /usr/share/zoneinfo/Europe/Brussels /etc/localtime
 EOF
 USER haproxy
 # Start HAProxy (-db = do not background)
-CMD ["haproxy", "-f", "/usr/local/etc/haproxy/haproxy.cfg", "-db"]
+CMD ["/usr/sbin/haproxy", "-f", "/usr/local/etc/haproxy/haproxy.cfg", "-db"]
