--- a/duoauthproxy/Dockerfile
+++ b/duoauthproxy/Dockerfile
@@ -1,6 +1,6 @@
 # syntax=docker/dockerfile:1
-FROM almalinux:9.2-minimal
-LABEL os="almalinux:9.2-minimal"
+FROM almalinux/9-minimal:9.4
+LABEL os="almalinux:9.4-minimal"
 LABEL maintainer="dev_lau11@a.jlv6.com"
 RUN <<EOF
   set -eux
@@ -13,7 +13,7 @@ RUN <<EOF
   tar xzf ./duoauthproxy.tgz -C ./duoauthproxy --strip-components=1
   cd ./duoauthproxy
   make
-  ./duoauthproxy-build/install --install-dir /opt/duoauthproxy --service-user duo_authproxy_svc --log-group duo_authproxy_grp --create-init-script yes --enable-selinux=no
+  ./duoauthproxy-build/install --install-dir /opt/duoauthproxy --service-user duo_auth_svc --log-group duo_auth_log_grp --create-init-script yes --enable-selinux=no
   rm -rf ../duoauthproxy ../duoauthproxy.tgz
 EOF
 EXPOSE 389
