--- a/.github/workflows/duoauthproxy_build_docker_image.yaml
+++ b/.github/workflows/duoauthproxy_build_docker_image.yaml
@@ -34,22 +34,26 @@ jobs:
         uses: docker/setup-buildx-action@v3
         with:
           buildkitd-config-inline: |
-            [registry."${{ env.REGISTRY }}"]
+            [registry."${{ secret.FORGEJO_REGISTRY01 }}"]
               http = true
               insecure = true
       - name: extract metadata for the docker image
         id: meta
         uses: docker/metadata-action@v5
         with:
-          images: "${{ env.REGISTRY }}/arc-${{ env.GIT_SUBDIR }}"
+          images: "${{ secret.FORGEJO_REGISTRY01 }}/arc-${{ env.GIT_SUBDIR }}"
+      - name: login to forgejo
+        uses: docker/login-action@v3
+        with:
+          registry: ${{ secret.FORGEJO_REGISTRY01 }}
+          username: ${{ secret.FORGEJO_USER01 }}
+          password: ${{ secret.FORGEJO_USER01_PAT }}
       - name: build and push
         uses: docker/build-push-action@v5
         with:
           context: "{{defaultContext}}:${{ env.GIT_SUBDIR }}"
           push: true
           platforms: linux/amd64, linux/arm64
-          secrets: |
-            "GIT_AUTH_TOKEN=${{ secrets.FORGEJO_K8SRUNNER434_PAT }}"
           tags: |
-            "${{ env.REGISTRY }}/arc-${{ env.GIT_SUBDIR }}:latest"
-            "${{ env.REGISTRY }}/arc-${{ env.GIT_SUBDIR }}:${{ vars.DUO_VERSION }}"
+            "${{ secret.FORGEJO_REGISTRY01 }}/arc-${{ env.GIT_SUBDIR }}:latest"
+            "${{ secret.FORGEJO_REGISTRY01 }}/arc-${{ env.GIT_SUBDIR }}:${{ vars.DUO_VERSION }}"
