--- a/.github/workflows/duoauthproxy_build_docker_image.yaml
+++ b/.github/workflows/duoauthproxy_build_docker_image.yaml
@@ -34,20 +34,20 @@ jobs:
         uses: docker/setup-buildx-action@v3
         with:
           buildkitd-config-inline: |
-            [registry."${{ secret.FORGEJO_REGISTRY01 }}"]
+            [registry."${{ secrets.FORGEJO_REGISTRY01 }}"]
               http = true
               insecure = true
       - name: extract metadata for the docker image
         id: meta
         uses: docker/metadata-action@v5
         with:
-          images: "${{ secret.FORGEJO_REGISTRY01 }}/arc-${{ env.GIT_SUBDIR }}"
+          images: "${{ secrets.FORGEJO_REGISTRY01 }}/arc-${{ env.GIT_SUBDIR }}"
       - name: login to forgejo
         uses: docker/login-action@v3
         with:
-          registry: ${{ secret.FORGEJO_REGISTRY01 }}
-          username: ${{ secret.FORGEJO_USER01 }}
-          password: ${{ secret.FORGEJO_USER01_PAT }}
+          registry: "${{ secrets.FORGEJO_REGISTRY01 }}"
+          username: "${{ secrets.FORGEJO_USER01 }}"
+          password: "${{ secrets.FORGEJO_USER01_PAT }}"
       - name: build and push
         uses: docker/build-push-action@v5
         with:
@@ -55,5 +55,5 @@ jobs:
           push: true
           platforms: linux/amd64, linux/arm64
           tags: |
-            "${{ secret.FORGEJO_REGISTRY01 }}/arc-${{ env.GIT_SUBDIR }}:latest"
-            "${{ secret.FORGEJO_REGISTRY01 }}/arc-${{ env.GIT_SUBDIR }}:${{ vars.DUO_VERSION }}"
+            "${{ secrets.FORGEJO_REGISTRY01 }}/arc-${{ env.GIT_SUBDIR }}:latest"
+            "${{ secrets.FORGEJO_REGISTRY01 }}/arc-${{ env.GIT_SUBDIR }}:${{ vars.DUO_VERSION }}"
