--- a/.github/workflows/duoauthproxy_build_docker_image.yaml
+++ b/.github/workflows/duoauthproxy_build_docker_image.yaml
@@ -46,7 +46,7 @@ jobs:
           cat /etc/docker/daemon.json
       - name: login to forgejo
         run: |
-          docker login ${{ secrets.FORGEJO_REGISTRY01 }} -u ${{ secrets.FORGEJO_USER01 }} -p ${{ FORGEJO_USER01_PAT }}
+          docker login http://${{ secrets.FORGEJO_REGISTRY01 }} -u ${{ secrets.FORGEJO_USER01 }} -p ${{ secrets.FORGEJO_USER01_PAT }}
       - name: output daemon.json 2
         run: |
           cat /etc/docker/daemon.json
