--- a/.github/workflows/duoauthproxy_check_for_new_version.yaml
+++ b/.github/workflows/duoauthproxy_check_for_new_version.yaml
@@ -9,12 +9,17 @@ concurrency:
   group: ${{ github.workflow }}
   cancel-in-progress: true
 
+permissions:
+  contents: read
+  actions: read
+  secrets: write
+
 jobs:
   check-version:
-    runs-on: [self-hosted, X64]
+    runs-on:
+      - self-hosted
     steps:
-      - name: check_version
-        id: check_version
+      - name: find latest available version and update secrets
         run: |
           latest_version=$(curl -s -I -L "https://dl.duosecurity.com/duoauthproxy-latest-src.tgz" | grep -i "content-disposition" | awk -F'filename="' '{print $2}' | awk -F'"' '{print $1}' | awk -F'-' '{print $2}')
 
@@ -24,18 +29,18 @@ jobs:
             curl -L \
               -X PATCH \
               -H "Accept: application/vnd.github+json" \
-              -H "Authorization: Bearer ${{ secrets.PAT }}" \
+              -H "Authorization: Bearer ${{ secrets.GITHUB_TOKEN }}" \
               -H "X-GitHub-Api-Version: 2022-11-28" \
-              https://api.github.com/repos/elaurensx/dockerbuild/actions/variables/DUO_NEW_VERSION_FOUND \
               -d "{\"name\":\"DUO_NEW_VERSION_FOUND\",\"value\":\"true\"}"
+              https://api.github.com/repos/elaurensx/dockerbuild/actions/variables/DUO_NEW_VERSION_FOUND \
               
             curl -L \
               -X PATCH \
               -H "Accept: application/vnd.github+json" \
-              -H "Authorization: Bearer ${{ secrets.PAT }}" \
+              -H "Authorization: Bearer ${{ secrets.GITHUB_TOKEN }}" \
               -H "X-GitHub-Api-Version: 2022-11-28" \
-              https://api.github.com/repos/elaurensx/dockerbuild/actions/variables/DUO_VERSION \
               -d "{\"name\":\"DUO_VERSION\",\"value\":\"$latest_version\"}"
+              https://api.github.com/repos/elaurensx/dockerbuild/actions/variables/DUO_VERSION \
               
           else
             echo "No new version found."
@@ -43,9 +48,8 @@ jobs:
             curl -L \
               -X PATCH \
               -H "Accept: application/vnd.github+json" \
-              -H "Authorization: Bearer ${{ secrets.PAT }}" \
+              -H "Authorization: Bearer ${{ secrets.GITHUB_TOKEN }}" \
               -H "X-GitHub-Api-Version: 2022-11-28" \
-              https://api.github.com/repos/elaurensx/dockerbuild/actions/variables/DUO_NEW_VERSION_FOUND \
               -d "{\"name\":\"DUO_NEW_VERSION_FOUND\",\"value\":\"false\"}"
-              
+              https://api.github.com/repos/elaurensx/dockerbuild/actions/variables/DUO_NEW_VERSION_FOUND \
           fi
