Replace secrets.GITHUB_TOKEN by repo.PAT

--- a/.github/workflows/duoauthproxy_check_for_new_version.yaml
+++ b/.github/workflows/duoauthproxy_check_for_new_version.yaml
@@ -9,11 +9,6 @@ concurrency:
   group: ${{ github.workflow }}
   cancel-in-progress: true
 
-permissions:
-  contents: read
-  actions: read
-  secrets: write
-
 jobs:
   check-version:
     runs-on:
@@ -29,7 +24,7 @@ jobs:
             curl -L \
               -X PATCH \
               -H "Accept: application/vnd.github+json" \
-              -H "Authorization: Bearer ${{ secrets.GITHUB_TOKEN }}" \
+              -H "Authorization: Bearer ${{ secrets.PAT }}" \
               -H "X-GitHub-Api-Version: 2022-11-28" \
               -d "{\"name\":\"DUO_NEW_VERSION_FOUND\",\"value\":\"true\"}"
               https://api.github.com/repos/elaurensx/dockerbuild/actions/variables/DUO_NEW_VERSION_FOUND \
@@ -37,7 +32,7 @@ jobs:
             curl -L \
               -X PATCH \
               -H "Accept: application/vnd.github+json" \
-              -H "Authorization: Bearer ${{ secrets.GITHUB_TOKEN }}" \
+              -H "Authorization: Bearer ${{ secrets.PAT }}" \
               -H "X-GitHub-Api-Version: 2022-11-28" \
               -d "{\"name\":\"DUO_VERSION\",\"value\":\"$latest_version\"}"
               https://api.github.com/repos/elaurensx/dockerbuild/actions/variables/DUO_VERSION \
@@ -48,7 +43,7 @@ jobs:
             curl -L \
               -X PATCH \
               -H "Accept: application/vnd.github+json" \
-              -H "Authorization: Bearer ${{ secrets.GITHUB_TOKEN }}" \
+              -H "Authorization: Bearer ${{ secrets.PAT }}" \
               -H "X-GitHub-Api-Version: 2022-11-28" \
               -d "{\"name\":\"DUO_NEW_VERSION_FOUND\",\"value\":\"false\"}"
               https://api.github.com/repos/elaurensx/dockerbuild/actions/variables/DUO_NEW_VERSION_FOUND \
