--- a/.github/workflows/duoauthproxy_build_docker_image.yaml
+++ b/.github/workflows/duoauthproxy_build_docker_image.yaml
@@ -2,61 +2,138 @@ name: duoauthproxy - build_docker_image
 
 env:
   GIT_SUBDIR: duoauthproxy
+  REGISTRY_IMAGE: "${{ secrets.FORGEJO_REGISTRY01 }}/${{ secrets.FORGEJO_OWNER01 }}/arc-${{ env.GIT_SUBDIR }}"
 
 on:
   workflow_run:
     workflows: ["duoauthproxy - check_for_new_version"]
-    branches:
-      - main
-    types:
-      - completed
+    branches: ["main"]
+    types: ["completed"]
 
 concurrency:
   group: ${{ github.workflow }}
   cancel-in-progress: true
 
 jobs:
+
   debug:
-    runs-on:
-      - self-hosted
-      - X64
+    runs-on: ["self-hosted"]
     steps:
       - name: print var DUO_NEW_VERSION_FOUND
         run: echo "DUO_NEW_VERSION_FOUND value is ${{ vars.DUO_NEW_VERSION_FOUND }}" 
+
   build-image:
-    runs-on:
-      - self-hosted
-      - X64
-    needs: debug  # Actions runs jobs in parallel by default. Setting a dependency makes it run in a sequence.
+    strategy:
+      matrix:
+        arch: ["X64","ARM64"]
+    runs-on: ["self-hosted","${{ matrix.arch }}"]
+    needs: debug
     if: ${{ vars.DUO_NEW_VERSION_FOUND == 'true' }}
+
     steps:
-      - name: checkout
+
+      - name: Checkout
         uses: actions/checkout@v4
-      - name: setup QEMU
-        uses: docker/setup-qemu-action@v3
-      - name: setup Docker Buildx
-        uses: docker/setup-buildx-action@v3
-        with:
-          buildkitd-config-inline: |
-            [registry."${{ secrets.FORGEJO_REGISTRY01 }}"]
-              http = false
-              insecure = false
-      - name: extract metadata for the docker image
+
+      - name: Docker metadata extraction
         id: meta
         uses: docker/metadata-action@v5
         with:
-          images: "${{ secrets.FORGEJO_REGISTRY01 }}/${{ secrets.FORGEJO_OWNER01 }}/arc-${{ env.GIT_SUBDIR }}"
-      - name: login to forgejo
+          images: ${{ env.REGISTRY_IMAGE }}
+          tags: |
+            type=ref,event=branch
+            type=ref,event=pr
+            type=ref,event=tag
+            type=sha
+            type=raw,value=${{ vars.DUO_VERSION }}
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+        with:
+          buildkitd-config-inline: |
+            [registry.${{ secrets.FORGEJO_REGISTRY01 }}]
+              http = false
+              insecure = false
+
+      - name: Login to forgejo
         uses: docker/login-action@v3
         with:
           registry: ${{ secrets.FORGEJO_REGISTRY01 }}
           username: ${{ secrets.FORGEJO_USER01 }}
           password: ${{ secrets.FORGEJO_USER01_PAT }}
-      - name: build and push
-        uses: docker/build-push-action@v5
+
+      - name: Build and push by digest
+        id: build
+        uses: docker/build-push-action@v6
         with:
-          context: "{{defaultContext}}:${{ env.GIT_SUBDIR }}"
-          push: true
-          platforms: linux/amd64, linux/arm64
+          context: {{defaultContext}}:${{ env.GIT_SUBDIR }}
+          file: Dockerfile
+          labels: ${{ steps.meta.outputs.labels }}
+          annotations: ${{ steps.meta.outputs.annotations }}
+          outputs: type=image,name=${{ env.REGISTRY_IMAGE }},push-by-digest=true,name-canonical=true,push=true
+          cache-from: type=gha,scope=build-${{ matrix.arch }}
+          cache-to: type=gha,mode=max,scope=build-${{ matrix.arch }}
+
+      - name: Export digest
+        run: |
+          mkdir -p /tmp/digests
+          digest=${{ steps.build.outputs.digest }}
+          touch "/tmp/digests/${digest#sha256:}"
+
+      - name: Upload digests
+        uses: actions/upload-artifact@v4
+        with:
+          name: digests-${{ matrix.arch }}
+          path: /tmp/digests/*
+          if-no-files-found: error
+          retention-days: 1
+
+  merge:
+    runs-on: ["self-hosted"]
+    needs: build-image
+
+    steps:
+
+      - name: Download digests
+        ses: actions/download-artifact@v4
+        with:
+          path: /tmp/digests
+          pattern: digests-*
+          merge-multiple: true
+
+      - name: Docker metadata extraction
+        id: meta
+        uses: docker/metadata-action@v5
+        with:
+          images: ${{ env.REGISTRY_IMAGE }}
           tags: |
-            "${{ secrets.FORGEJO_REGISTRY01 }}/${{ secrets.FORGEJO_OWNER01 }}/arc-${{ env.GIT_SUBDIR }}:${{ vars.DUO_VERSION }}"
+            type=ref,event=branch
+            type=ref,event=pr
+            type=ref,event=tag
+            type=sha
+            type=raw,value=${{ vars.DUO_VERSION }}
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+        with:
+          buildkitd-config-inline: |
+            [registry.${{ secrets.FORGEJO_REGISTRY01 }}]
+              http = false
+              insecure = false
+
+      - name: Login to forgejo
+        uses: docker/login-action@v3
+        with:
+          registry: ${{ secrets.FORGEJO_REGISTRY01 }}
+          username: ${{ secrets.FORGEJO_USER01 }}
+          password: ${{ secrets.FORGEJO_USER01_PAT }}
+
+      - name: Create manifest list and push
+        working-directory: /tmp/digests
+        run: |
+          docker buildx imagetools create $(jq -cr '.tags | map("-t " + .) | join(" ")' <<< "$DOCKER_METADATA_OUTPUT_JSON") \
+            $(printf '${{ env.REGISTRY_IMAGE }}@sha256:%s ' *)
+
+      - name: Inspect image
+        run: |
+          docker buildx imagetools inspect ${{ env.REGISTRY_IMAGE }}:${{ steps.meta.outputs.version }}
