Fixed typo in DuoAuthProxy WF

--- a/.github/workflows/duoauthproxy_build_docker_image.yaml
+++ b/.github/workflows/duoauthproxy_build_docker_image.yaml
@@ -95,7 +95,7 @@ jobs:
     steps:
 
       - name: Download digests
-        ses: actions/download-artifact@v4
+        uses: actions/download-artifact@v4
         with:
           path: /tmp/digests
           pattern: digests-*
