--- a/.github/workflows/duoauthproxy_build_docker_image.yaml
+++ b/.github/workflows/duoauthproxy_build_docker_image.yaml
@@ -18,7 +18,7 @@ concurrency:
 jobs:
 
   debug:
-    runs-on: ["self-hosted"]
+    runs-on: self-hosted
     steps:
       - name: print var DUO_NEW_VERSION_FOUND
         run: echo "DUO_NEW_VERSION_FOUND value is ${{ vars.DUO_NEW_VERSION_FOUND }}" 
@@ -27,7 +27,7 @@ jobs:
     strategy:
       matrix:
         arch: ["X64","ARM64"]
-    runs-on: ["self-hosted","${{ matrix.arch }}"]
+    runs-on: ${{ matrix.arch }}
     needs: debug
     if: ${{ vars.DUO_NEW_VERSION_FOUND == 'true' }}
 
@@ -50,11 +50,6 @@ jobs:
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
-        with:
-          buildkitd-config-inline: |
-            [registry.${{ secrets.FORGEJO_REGISTRY01 }}]
-              http = false
-              insecure = false
 
       - name: Login to forgejo
         uses: docker/login-action@v3
@@ -90,7 +85,7 @@ jobs:
           retention-days: 1
 
   merge:
-    runs-on: ["self-hosted"]
+    runs-on: self-hosted
     needs: build-image
 
     steps:
@@ -116,11 +111,6 @@ jobs:
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
-        with:
-          buildkitd-config-inline: |
-            [registry.${{ secrets.FORGEJO_REGISTRY01 }}]
-              http = false
-              insecure = false
 
       - name: Login to forgejo
         uses: docker/login-action@v3
